# open-trade

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: firestore.py  firestore_strategies.py  heartbeat.py  main.py  permissions.py  runner.py  schedule_manager.py  scheduler.py  telegram.py  threads.py  tools.py  user_context.py
agent/tools/: __init__.py  strategies.py
api/: activity_log.py  auth.py  firebase_admin.py  server.py  token_usage.py
api/routes/: actions.py  activity.py  chat.py  memory.py  schedules.py  settings.py  state.py  strategies.py
data/: dhan_client.py  fundamentals.py  indicators.py  news.py  universe.py
docs/adr/: 001-vibe-trade-spec-delta.md
memory/: HEARTBEAT.md  JOURNAL.md.example  MARKET.md.example  SOUL.md  STRATEGY.md.example
risk/: guard.py
web/: middleware.ts  next.config.js  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/approvals/: page.tsx
web/app/dashboard/: page.tsx
web/app/journal/: page.tsx
web/app/login/: layout.tsx  page.tsx
web/components/: ActivityFeed.tsx  ActivityPanel.tsx  AgentStatusBar.tsx  ApprovalItem.tsx  CapitalPanel.tsx  DashboardPanel.tsx  DocumentsPanel.tsx  HeartbeatPulse.tsx  MISCountdown.tsx  MarkdownRenderer.tsx  MarketRegimeBadge.tsx  PermissionCard.tsx  PositionCard.tsx  ProposalCard.tsx  RiskGauge.tsx  Sidebar.tsx  SlidePanel.tsx  StrategyBadge.tsx  StrategyProposalCard.tsx  StrategySettingsPanel.tsx  Toast.tsx  TokenUsageCard.tsx  TriggerCard.tsx  WatchlistCard.tsx
web/lib/: auth.tsx  firebase.ts  strategy.ts  types.ts
(+5 files in other folders)
